--- a/about-us.html
+++ b/about-us.html
@@ -314,10 +314,14 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img src="" class="img-fluid" alt="#0" />
+                      <img
+                        src="/images/pngwing.com.png"
+                        class="img-fluid"
+                        alt="#0"
+                      />
                     </div>
                     <div class="team-description mb-3 text-center">
-                      <h5 class="text-white">Sal Monella</h5>
+                      <!-- <h5 class="text-white">Sal Monella</h5> -->
                       <p>Business Advisor</p>
                     </div>
                     <div class="team-social">
@@ -338,10 +342,14 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img src="" class="img-fluid" alt="#0" />
+                      <img
+                        src="/images/pngwing.com.png"
+                        class="img-fluid"
+                        alt="#0"
+                      />
                     </div>
                     <div class="team-description mb-3 text-center">
-                      <h5 class="text-white">Rick O'Shea</h5>
+                      <!-- <h5 class="text-white">Rick O'Shea</h5> -->
                       <p>Business Advisor</p>
                     </div>
                     <div class="team-social">
@@ -362,10 +370,14 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img src="" class="img-fluid" alt="#0" />
+                      <img
+                        src="/images/pngwing.com.png"
+                        class="img-fluid"
+                        alt="#0"
+                      />
                     </div>
                     <div class="team-description mb-3 text-center">
-                      <h5 class="text-white">Brock Lee</h5>
+                      <!-- <h5 class="text-white">Brock Lee</h5> -->
                       <p>Business Advisor</p>
                     </div>
                     <div class="team-social">
@@ -386,10 +398,14 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img src="" class="img-fluid" alt="#0" />
+                      <img
+                        src="/images/pngwing.com.png"
+                        class="img-fluid"
+                        alt="#0"
+                      />
                     </div>
                     <div class="team-description mb-3 text-center">
-                      <h5 class="text-white">Paige Turner</h5>
+                      <!-- <h5 class="text-white">Paige Turner</h5> -->
                       <p>Business Advisor</p>
                     </div>
                     <div class="team-social">
@@ -410,10 +426,14 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img src="" class="img-fluid" alt="#0" />
+                      <img
+                        src="/images/pngwing.com.png"
+                        class="img-fluid"
+                        alt="#0"
+                      />
                     </div>
                     <div class="team-description mb-3 text-center">
-                      <h5 class="text-white">Gail Forcewind</h5>
+                      <!-- <h5 class="text-white">Gail Forcewind</h5> -->
                       <p>Business Advisor</p>
                     </div>
                     <div class="team-social">
@@ -434,10 +454,14 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img src="" class="img-fluid" alt="#0" />
+                      <img
+                        src="/images/pngwing.com.png"
+                        class="img-fluid"
+                        alt="#0"
+                      />
                     </div>
                     <div class="team-description mb-3 text-center">
-                      <h5 class="text-white">Paul Molive</h5>
+                      <!-- <h5 class="text-white">Paul Molive</h5> -->
                       <p>Business Advisor</p>
                     </div>
                     <div class="team-social">
@@ -458,10 +482,14 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img src="" class="img-fluid" alt="#0" />
+                      <img
+                        src="/images/pngwing.com.png"
+                        class="img-fluid"
+                        alt="#0"
+                      />
                     </div>
                     <div class="team-description mb-3 text-center">
-                      <h5 class="text-white">Anna Sthesia</h5>
+                      <!-- <h5 class="text-white">Anna Sthesia</h5> -->
                       <p>Business Advisor</p>
                     </div>
                     <div class="team-social">
