--- a/careers.html
+++ b/careers.html
@@ -139,7 +139,7 @@
             <div class="col-lg-12">
               <div class="title-box text-center">
                 <h2>Open Positions</h2>
-                <p>If you are planning on developing a product landing</p>
+                <p>If you are planning on starting a career with us</p>
               </div>
               <div class="iq-accordion career-style">
                 <div class="iq-accordion-block">
@@ -148,15 +148,15 @@
                       <div class="row align-items-center">
                         <div class="col-md-9 col-sm-12">
                           <a href="contact-us.html" class="accordion-title"
-                            ><span>Web Developer</span></a
+                            ><span>No positions for now</span></a
                           >
                         </div>
                         <div
                           class="col-md-3 col-sm-12 text-center text-lg-right text-md-right"
                         >
-                          <a class="button-gradient" href="contact-us.html"
+                          <!-- <a class="button-gradient" href="contact-us.html"
                             >Read more</a
-                          >
+                          > -->
                         </div>
                       </div>
                     </div>
