--- a/our-team.html
+++ b/our-team.html
@@ -156,10 +156,14 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img src="" class="img-fluid" alt="#0" />
+                        <img
+                          src="/images/pngwing.com.png"
+                          class="img-fluid"
+                          alt="#0"
+                        />
                       </div>
                       <div class="team-description mb-3 text-center">
-                        <h5 class="text-white">Sal Monella</h5>
+                        <!-- <h5 class="text-white">Sal Monella</h5> -->
                         <p>Business Advisor</p>
                       </div>
                       <div class="team-social">
@@ -180,10 +184,14 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img src="" class="img-fluid" alt="#0" />
+                        <img
+                          src="/images/pngwing.com.png"
+                          class="img-fluid"
+                          alt="#0"
+                        />
                       </div>
                       <div class="team-description mb-3 text-center">
-                        <h5 class="text-white">Rick O'Shea</h5>
+                        <!-- <h5 class="text-white">Rick O'Shea</h5> -->
                         <p>Business Advisor</p>
                       </div>
                       <div class="team-social">
@@ -204,10 +212,14 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img src="" class="img-fluid" alt="#0" />
+                        <img
+                          src="/images/pngwing.com.png"
+                          class="img-fluid"
+                          alt="#0"
+                        />
                       </div>
                       <div class="team-description mb-3 text-center">
-                        <h5 class="text-white">Brock Lee</h5>
+                        <!-- <h5 class="text-white">Brock Lee</h5> -->
                         <p>Business Advisor</p>
                       </div>
                       <div class="team-social">
@@ -228,10 +240,14 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img src="" class="img-fluid" alt="#0" />
+                        <img
+                          src="/images/pngwing.com.png"
+                          class="img-fluid"
+                          alt="#0"
+                        />
                       </div>
                       <div class="team-description mb-3 text-center">
-                        <h5 class="text-white">Paige Turner</h5>
+                        <!-- <h5 class="text-white">Paige Turner</h5> -->
                         <p>Business Advisor</p>
                       </div>
                       <div class="team-social">
@@ -252,10 +268,14 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img src="" class="img-fluid" alt="#0" />
+                        <img
+                          src="/images/pngwing.com.png"
+                          class="img-fluid"
+                          alt="#0"
+                        />
                       </div>
                       <div class="team-description mb-3 text-center">
-                        <h5 class="text-white">Gail Forcewind</h5>
+                        <!-- <h5 class="text-white">Gail Forcewind</h5> -->
                         <p>Business Advisor</p>
                       </div>
                       <div class="team-social">
@@ -276,10 +296,14 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img src="" class="img-fluid" alt="#0" />
+                        <img
+                          src="/images/pngwing.com.png"
+                          class="img-fluid"
+                          alt="#0"
+                        />
                       </div>
                       <div class="team-description mb-3 text-center">
-                        <h5 class="text-white">Paul Molive</h5>
+                        <!-- <h5 class="text-white">Paul Molive</h5> -->
                         <p>Business Advisor</p>
                       </div>
                       <div class="team-social">
@@ -300,10 +324,14 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img src="" class="img-fluid" alt="#0" />
+                        <img
+                          src="/images/pngwing.com.png"
+                          class="img-fluid"
+                          alt="#0"
+                        />
                       </div>
                       <div class="team-description mb-3 text-center">
-                        <h5 class="text-white">Anna Sthesia</h5>
+                        <!-- <h5 class="text-white">Anna Sthesia</h5> -->
                         <p>Business Advisor</p>
                       </div>
                       <div class="team-social">
