--- a/contact-us.html
+++ b/contact-us.html
@@ -50,8 +50,12 @@
         <div class="row">
           <div class="col-sm-12">
             <nav class="navbar navbar-expand-lg navbar-light">
-              <a class="navbar-brand" href="index.html">
-                <img class="img-fluid" src="images/barley-logo.png" alt="img" />
+              <a class="navbar-brand home-img" href="index.html">
+                <img
+                  class="img-fluid"
+                  src="images/barleyfield-assets/barley-logo-removebg-preview.png"
+                  alt="img"
+                />
               </a>
               <button
                 class="navbar-toggler"
@@ -236,13 +240,13 @@
             <ul class="menu">
               <li class="text-white">
                 <h5 class="mb-4 text-white">Head Office</h5>
-                78A CMD-Jubilee Road,Magodo Behind MOBIL Filling Station, Along
-                Lagos-Ibadan Expressway. P.O.Box 5004,Ikeja,Lagos.
+                7, Alh. Hakeem Ogbara Street, off Pillars Street, Oke-Oriya,
+                Ikorodu, Lagos State.
               </li>
               <li class="text-white">
                 <h5 class="mb-4 text-white">Regional Office (East)</h5>
-                78A CMD-Jubilee Road,Magodo Behind MOBIL Filling Station, Along
-                Lagos-Ibadan Expressway. P.O.Box 5004,Ikeja,Lagos.
+                6 Wawuna Street Off Obi Wali Road, Rumuigbo, Port Harcourt,
+                Rivers State.
               </li>
             </ul>
           </div>
@@ -257,19 +261,8 @@
                 <a class="text-white" href="tel:+2348035550215"
                   >+234 (803) 5550-215</a
                 ><br />
-                <a class="text-white" href="tel:+2348031143545"
-                  >+234 (803) 1143-545</a
-                ><br />
-                <a class="text-white" href="tel:+2347064000999"
-                  >+234 (706) 4000-999</a
-                ><br />
-                <a class="text-white" href="tel:+2348038879591"
-                  >+234 (803) 8879-591</a
-                ><br />
-                <a class="text-white" href="tel:+2348181100441"
-                  >+234 (818) 1100-441</a
-                >
               </li>
+
               <li>
                 <h5 class="mb-4 text-white">Email</h5>
                 <a class="text-white" href="mailto:barleyfield2003@yahoo.com"
