--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
           <div class="col-sm-12">
             <nav class="navbar navbar-expand-lg navbar-light">
               <a class="navbar-brand" href="index.html">
-                <img class="img-fluid" src="images/barley-logo.png" alt="img" />
+                <img
+                  class="img-fluid home-img"
+                  src="images/barleyfield-assets/barley-logo-removebg-preview.png"
+                  alt="img"
+                />
               </a>
               <button
                 class="navbar-toggler"
@@ -516,7 +520,7 @@
             <div class="logo">
               <a href="index.html">
                 <img
-                  class="img-fluid mb-3"
+                  class="home-img img-fluid mb-3"
                   style="width: 20% !important"
                   src="images/barleyfield-assets/barley-logo-removebg-preview.png"
                   alt="img"
@@ -537,13 +541,13 @@
             <ul class="menu">
               <li class="text-white">
                 <h5 class="mb-4 text-white">Head Office</h5>
-                78A CMD-Jubilee Road,Magodo Behind MOBIL Filling Station, Along
-                Lagos-Ibadan Expressway. P.O.Box 5004,Ikeja,Lagos.
+                7, Alh. Hakeem Ogbara Street, off Pillars Street, Oke-Oriya,
+                Ikorodu, Lagos State.
               </li>
               <li class="text-white">
                 <h5 class="mb-4 text-white">Regional Office (East)</h5>
-                78A CMD-Jubilee Road,Magodo Behind MOBIL Filling Station, Along
-                Lagos-Ibadan Expressway. P.O.Box 5004,Ikeja,Lagos.
+                6 Wawuna Street Off Obi Wali Road, Rumuigbo, Port Harcourt,
+                Rivers State.
               </li>
             </ul>
           </div>
@@ -558,18 +562,6 @@
                 <a class="text-white" href="tel:+2348035550215"
                   >+234 (803) 5550-215</a
                 ><br />
-                <a class="text-white" href="tel:+2348031143545"
-                  >+234 (803) 1143-545</a
-                ><br />
-                <a class="text-white" href="tel:+2347064000999"
-                  >+234 (706) 4000-999</a
-                ><br />
-                <a class="text-white" href="tel:+2348038879591"
-                  >+234 (803) 8879-591</a
-                ><br />
-                <a class="text-white" href="tel:+2348181100441"
-                  >+234 (818) 1100-441</a
-                >
               </li>
               <li>
                 <h5 class="mb-4 text-white">Email</h5>
