--- a/about-us.html
+++ b/about-us.html
@@ -110,19 +110,24 @@
       </div>
     </header>
     <!-- /HEADER END -->
-    <div class="text-left iq-breadcrumb-one iq-bg-over black">
+    <div
+      class="text-left iq-breadcrumb-one iq-bg-over black"
+      style="background: #042"
+    >
       <div class="container">
         <div class="row align-items-center">
           <div class="col-sm-12">
             <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
-              <h2 class="title-breadcrumb">About Us</h2>
+              <h2 class="title-breadcrumb" style="color: #fff">About Us</h2>
               <ol class="breadcrumb main-bg">
                 <li class="breadcrumb-item">
-                  <a href="index.html"
+                  <a href="index.html" style="color: #fff"
                     ><i class="fa fa-home mr-1" aria-hidden="true"></i>Home</a
                   >
                 </li>
-                <li class="breadcrumb-item active">About Us</li>
+                <li class="breadcrumb-item active" style="color: #fff">
+                  About Us
+                </li>
               </ol>
             </nav>
           </div>
