--- a/our-team.html
+++ b/our-team.html
@@ -105,19 +105,24 @@
       </div>
     </header>
     <!-- Header End -->
-    <div class="text-left iq-breadcrumb-one iq-bg-over">
+    <div
+      class="text-left iq-breadcrumb-one iq-bg-over"
+      style="background: #042"
+    >
       <div class="container">
         <div class="row align-items-center">
           <div class="col-sm-12">
             <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
-              <h2 class="title-breadcrumb">Our Team</h2>
+              <h2 class="title-breadcrumb" style="color: #fff">Our Team</h2>
               <ol class="breadcrumb main-bg">
                 <li class="breadcrumb-item">
-                  <a href="index.html"
+                  <a href="index.html" style="color: #fff"
                     ><i class="fa fa-home mr-1" aria-hidden="true"></i>Home</a
                   >
                 </li>
-                <li class="breadcrumb-item active">Our Team</li>
+                <li class="breadcrumb-item active" style="color: #fff">
+                  Our Team
+                </li>
               </ol>
             </nav>
           </div>
